@@ -32,6 +32,6 @@
   -->
   <tab label="Project" href="http://hadoop.apache.org/pig/" type="visible" /> 
   <tab label="Wiki" href="http://wiki.apache.org/pig/" type="visible" /> 
-  <tab label="Pig 0.4.0 Documentation" dir="" type="visible" /> 
+  <tab label="Pig 0.5.0 Documentation" dir="" type="visible" /> 
 
 </tabs>
